# resume-bot

./: .gitignore  Dockerfile  README.md  app.py  fastapi_app.py  pyproject.toml  requirements.txt  scratch.ipynb  streamlit_app.py
evals/scripts/: calibrate_auto_annotators.ipynb  eval_prompts.py  eval_utils.py  evaluate.ipynb  generate_synthetic_traces.ipynb  traces_etl.ipynb
evals/src/: __init__.py  evaluator.py  llm_base.py  synthetic_query_generator.py  traces_etl.py
src/: graph.py  nodes.py  prompts.py  state.py  tools.py  utils.py
